# python-ext-wasm

./: pyproject.toml
src/: module.rs
src/instance/: mod.rs
